--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Form3Activity"></activity>
+        <activity android:name=".COVIDTestAcrivity"></activity>
+        <activity android:name=".Form3Activity" />
         <activity android:name=".Form2Actvity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".MainActivity">
