--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,5 +40,6 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.google.firebase:firebase-database-ktx:19.3.0'
     implementation 'com.google.firebase:firebase-auth-ktx:19.3.1'
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 
 }
